--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <section class="section" id="metodologia">
       <div class="text-box">
         <h2>¿Cómo trabajaremos?</h2>
-        <p>
-          Durante este proyecto, los estudiantes conocieron qué es el Internet de las Cosas (IoT) a través de una presentación con ejemplos y una charla grupal, debatieron qué cosas podrían automatizarse en la escuela, observaron una demostración práctica con Arduino o simuladores, eligieron una idea para desarrollar en grupos, investigaron su funcionamiento, planificaron los pasos, aplicaron conocimientos de matemática, programaron y armaron un prototipo con sensores, utilizaron herramientas con inteligencia artificial para escribir código y documentar, realizaron pruebas y mejoras, presentaron su prototipo al resto del curso y reflexionaron sobre el impacto social y ético del uso del IoT y la tecnología.
+        <p>          Durante este proyecto, los estudiantes conocerán qué es el Internet de las Cosas (IoT) a través de una presentación con ejemplos y una charla grupal, debatieran qué cosas podrían automatizarse en la escuela, observarán una demostración práctica con Arduino o simuladores, eligieran una idea para desarrollar en grupos, investigaran su funcionamiento, planificaran los pasos, aplicaron conocimientos de matemática, programaran y armaran un prototipo con sensores, utilizaron herramientas con inteligencia artificial para escribir código y documentaran, realizaran pruebas y mejoras, presentaran su prototipo al resto del curso y reflexionaran sobre el impacto social y ético del uso del IoT y la tecnología.
         </p>
         <button
           class="boton-actividad"
@@ -97,7 +96,7 @@
           <img src="img/card5.jpg" alt="Proyecto 5" />
           <h3>ACTIVIDAD N°5</h3>
           <p>
-            Programamos y armamos el prototipo usando Arduino o simuladores como Tinkercad. Conectamos sensores, enviamos datos a una app o tablero digital y usamos herramientas con IA (como Copilot) para escribir el código, utilizando el lenguaje Python. También documentamos el proceso.
+            Programamos y armamos el prototipo usando Arduino o simuladores como Tinkercad. Conectamos sensores, enviamos datos a una app o tablero digital y usamos herramientas con IA (como Copilot) para escribir el código, utilizando el lenguaje Python. También documentaremos el proceso.
           </p>
         </div>
         <div class="card">
