--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img src="img/card1.avif" alt="Proyecto 1" />
           <h3>ACTIVIDAD N°1</h3>
           <p>
-            Exploramos qué es el IoT mediante una presentación con imágenes y videos, analizamos ejemplos cotidianos y, en grupos, debatimos qué aspectos de la escuela podrían automatizarse para mejorar su funcionamiento.
+            Exploraremos qué es el IoT mediante una presentación con imágenes y videos, analizamos ejemplos cotidianos y, en grupos, debatimos qué aspectos de la escuela podrían automatizarse para mejorar su funcionamiento.
           </p>
         </div>
         <div class="card">
