--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="section" id="metodologia">
       <div class="text-box">
         <h2>¿Cómo trabajaremos?</h2>
-        <p>          Durante este proyecto, los estudiantes conocerán qué es el Internet de las Cosas (IoT) a través de una presentación con ejemplos y una charla grupal, debatieran qué cosas podrían automatizarse en la escuela, observarán una demostración práctica con Arduino o simuladores, eligieran una idea para desarrollar en grupos, investigaran su funcionamiento, planificaran los pasos, aplicaron conocimientos de matemática, programaran y armaran un prototipo con sensores, utilizaron herramientas con inteligencia artificial para escribir código y documentaran, realizaran pruebas y mejoras, presentaran su prototipo al resto del curso y reflexionaran sobre el impacto social y ético del uso del IoT y la tecnología.
+        <p>Durante este proyecto, los estudiantes conocerán qué es el Internet de las Cosas (IoT) a través de una presentación con ejemplos y una charla grupal, debatiran qué cosas podrían automatizarse en la escuela, observarán una demostración práctica con Arduino o simuladores, eligiran una idea para desarrollar en grupos, investigaran su funcionamiento, planificaran los pasos, aplicaran conocimientos de matemática, programaran y armaran un prototipo con sensores, utilizaran herramientas con inteligencia artificial para escribir código y documentaran, realizaran pruebas y mejoras, presentaran su prototipo al resto del curso y reflexionaran sobre el impacto social y ético del uso del IoT y la tecnología.
         </p>
         <button
           class="boton-actividad"
@@ -68,7 +68,7 @@
           <img src="img/card1.avif" alt="Proyecto 1" />
           <h3>ACTIVIDAD N°1</h3>
           <p>
-            Exploraremos qué es el IoT mediante una presentación con imágenes y videos, analizamos ejemplos cotidianos y, en grupos, debatimos qué aspectos de la escuela podrían automatizarse para mejorar su funcionamiento.
+            Exploraran qué es el IoT mediante una presentación con imágenes y videos, analizaremos ejemplos cotidianos y, en grupos, debatiran qué aspectos de la escuela podrían automatizarse para mejorar su funcionamiento.
           </p>
         </div>
         <div class="card">
@@ -82,21 +82,21 @@
           <img src="img/card3.jpg" alt="Proyecto 3" />
           <h3>ACTIVIDAD N°3</h3>
           <p>
-            Investigación y planificación (por grupos). Cada equipo elige una idea de automatización escolar. Investigan cómo podría funcionar y arman un plan de trabajo con los materiales y pasos necesarios.
+            Investigación y planificación (por grupos). Cada equipo elige una idea de automatización escolar. Investigaran cómo podría funcionar y armaran un plan de trabajo con los materiales y pasos necesarios.
           </p>
         </div>
         <div class="card">
           <img src="img/card4.avif" alt="Proyecto 4" />
           <h3>ACTIVIDAD N°4</h3>
           <p>
-            Matemática en acción. Aplicamos funciones, proporcionalidad y gráficos para entender y calcular lo que el sensor tiene que hacer (por ejemplo: cuándo prender una luz o activar una alarma).
+            Matemática en acción. Aplicaremos funciones, proporcionalidad y gráficos para entender y calcular lo que el sensor tiene que hacer (por ejemplo: cuándo prender una luz o activar una alarma).
           </p>
         </div>
         <div class="card">
           <img src="img/card5.jpg" alt="Proyecto 5" />
           <h3>ACTIVIDAD N°5</h3>
           <p>
-            Programamos y armamos el prototipo usando Arduino o simuladores como Tinkercad. Conectamos sensores, enviamos datos a una app o tablero digital y usamos herramientas con IA (como Copilot) para escribir el código, utilizando el lenguaje Python. También documentaremos el proceso.
+            Programaremos y armaremos el prototipo usando Arduino o simuladores como Tinkercad. Conectaremos sensores, enviamos datos a una app o tablero digital y usaremos herramientas con IA (como Copilot) para escribir el código, utilizando el lenguaje Python. También documentaremos el proceso.
           </p>
         </div>
         <div class="card">
@@ -112,7 +112,7 @@
           <img src="img/card7.avif" alt="Proyecto 7" />
           <h3>ACTIVIDAD N°7</h3>
           <p>
-            Presentación final en grupo. Cada equipo presenta su prototipo, explica cómo funciona, qué problema resuelve y cómo fue el proceso de creación.
+            Presentación final en grupo. Cada equipo presentara su prototipo, explicara cómo funciona, qué problema resuelve y cómo fue el proceso de creación.
             Se puede usar IA para armar las presentaciones o preparar resúmenes de lo trabajado.
           </p>
         </div>
@@ -120,8 +120,8 @@
           <img src="img/card8.jpg" alt="Proyecto 8" />
           <h3>ACTIVIDAD N°8</h3>
           <p>
-            Charla y reflexión ética. Conversamos sobre los aspectos éticos del uso del IoT y la inteligencia artificial: ¿Cómo afecta a las personas? ¿Qué responsabilidades tenemos al usar esta tecnología?
-            Pensamos juntos qué aprendimos y cómo podemos aplicar esto en el futuro.
+            Charla y reflexión ética. Conversaremos sobre los aspectos éticos del uso del IoT y la inteligencia artificial: ¿Cómo afecta a las personas? ¿Qué responsabilidades tenemos al usar esta tecnología?
+            Pensaremos juntos qué aprendimos y cómo podemos aplicar esto en el futuro.
           </p>
         </div>
       </div>
